# neko-contracts

./: .gitmodules  CLAUDE.md  README.md  skills-lock.json
stellar-contracts/adapters/adapter-aquarius/: Cargo.toml  README.md
stellar-contracts/adapters/adapter-aquarius/src/: contract.rs  lib.rs
stellar-contracts/adapters/adapter-blend/: Cargo.toml  README.md
stellar-contracts/adapters/adapter-blend/src/: contract.rs  lib.rs
stellar-contracts/adapters/adapter-neko/: Cargo.toml  README.md
stellar-contracts/adapters/adapter-neko/src/: contract.rs  lib.rs
stellar-contracts/adapters/adapter-rwa-lending/: Cargo.toml
stellar-contracts/adapters/adapter-rwa-lending/src/: lib.rs
stellar-contracts/neko-backstop/: Cargo.toml
stellar-contracts/neko-backstop/src/: admin.rs  contract.rs  error.rs  events.rs  lib.rs  operations.rs  storage.rs  types.rs
stellar-contracts/neko-backstop/src/test/: mod.rs
stellar-contracts/neko-factory/: Cargo.toml
stellar-contracts/neko-factory/src/: contract.rs  error.rs  events.rs  lib.rs  storage.rs
stellar-contracts/neko-factory/src/test/: mod.rs
stellar-contracts/neko-faucet/: Cargo.toml  README.md
stellar-contracts/neko-faucet/src/: contract.rs  storage.rs  types.rs
stellar-contracts/neko-oracle/: Cargo.toml  README.md
stellar-contracts/neko-oracle/src/: contract.rs  lib.rs
stellar-contracts/neko-oracle/src/common/: storage.rs
stellar-contracts/neko-oracle/src/rwa/: types.rs
stellar-contracts/neko-oracle/src/test/: mod.rs
stellar-contracts/neko-pool/: Cargo.toml  README.md
stellar-contracts/neko-pool/src/: contract.rs  lib.rs
stellar-contracts/neko-pool/src/admin/: mod.rs
stellar-contracts/neko-pool/src/common/: error.rs  events.rs  mod.rs  reserve_cache.rs  storage.rs  types.rs
stellar-contracts/neko-pool/src/operations/: backstop.rs  bad_debt.rs  borrowing.rs  collateral.rs  interest.rs  interest_auction.rs  lending.rs  liquidations.rs  mod.rs  oracles.rs
stellar-contracts/neko-pool/src/test/: mod.rs
stellar-contracts/neko-token/: Cargo.toml
stellar-contracts/neko-token/src/: contract.rs  lib.rs
stellar-contracts/neko-token/src/admin/: mod.rs  supply.rs
stellar-contracts/neko-token/src/common/: events.rs
stellar-contracts/neko-token/src/compliance/: freeze.rs  mod.rs  sep57.rs
stellar-contracts/neko-token/src/oracle/: mod.rs
stellar-contracts/neko-token/src/test/: mod.rs
stellar-contracts/neko-token/src/token/: mod.rs
stellar-contracts/neko-vault/: Cargo.toml
stellar-contracts/neko-vault/src/: lib.rs
stellar-contracts/neko-vault/src/adapters/: mod.rs
stellar-contracts/neko-vault/src/admin/: mod.rs
stellar-contracts/neko-vault/src/common/: events.rs  storage.rs
stellar-contracts/neko-vault/src/strategies/: mod.rs  optimizer.rs
stellar-contracts/neko-vault/src/vault/: deposit.rs  mod.rs  shares.rs
stellar-contracts/rwa-faucet/: Cargo.toml
stellar-contracts/rwa-faucet/src/: contract.rs  lib.rs  test.rs
stellar-contracts/rwa-lending/: Cargo.toml  README.md
stellar-contracts/rwa-lending/src/: contract.rs  lib.rs
stellar-contracts/rwa-lending/src/admin/: mod.rs
stellar-contracts/rwa-lending/src/common/: error.rs  events.rs  storage.rs  types.rs
stellar-contracts/rwa-lending/src/operations/: backstop.rs  bad_debt.rs  borrowing.rs  collateral.rs  interest.rs  interest_auction.rs  lending.rs  liquidations.rs  mod.rs  oracles.rs
stellar-contracts/rwa-lending/src/test/: mod.rs
stellar-contracts/rwa-lending/test_snapshots/test/: test_collateral_factor.1.json  test_d_token_rate.1.json  test_double_initialization.1.json  test_initialization.1.json  test_pool_balance.1.json  test_set_interest_rate_params.1.json  test_set_pool_state.1.json
stellar-contracts/rwa-oracle/: Cargo.toml  README.md
stellar-contracts/rwa-oracle/src/: contract.rs  lib.rs  rwa_oracle.rs  test.rs
stellar-contracts/rwa-oracle/src/admin/: mod.rs
stellar-contracts/rwa-oracle/src/common/: error.rs  mod.rs  storage.rs  types.rs
stellar-contracts/rwa-oracle/src/sep40/: interface.rs  mod.rs
stellar-contracts/rwa-oracle/src/test/: mod.rs
stellar-contracts/rwa-oracle/test_snapshots/test/: test_error_handling.1.json  test_get_all_rwa_assets.1.json  test_price_feed_compatibility.1.json  test_regulatory_info.1.json  test_rwa_oracle_initialization.1.json  test_set_rwa_metadata.1.json  test_set_xasset_contract.1.json  test_update_pool_info.1.json
stellar-contracts/rwa-perps/: Cargo.toml
stellar-contracts/rwa-perps/src/: contract.rs  lib.rs
stellar-contracts/rwa-perps/src/admin/: mod.rs
stellar-contracts/rwa-perps/src/common/: error.rs  events.rs  storage.rs  types.rs
stellar-contracts/rwa-perps/src/operations/: funding.rs  liquidation.rs  margin.rs  mod.rs  positions.rs
stellar-contracts/rwa-perps/src/test/: mod.rs
stellar-contracts/rwa-token/: Cargo.toml  README.md
stellar-contracts/rwa-token/src/: contract.rs  error.rs  lib.rs  token.rs
stellar-contracts/rwa-token/src/admin/: mod.rs  supply.rs
stellar-contracts/rwa-token/src/common/: error.rs  events.rs  metadata.rs  mod.rs  types.rs
stellar-contracts/rwa-token/src/compliance/: freeze.rs  sep57.rs
stellar-contracts/rwa-token/src/oracle/: mod.rs
stellar-contracts/rwa-token/src/test/: mod.rs
stellar-contracts/rwa-token/src/token/: allowance.rs  balance.rs  interface.rs
stellar-contracts/rwa-token/test_snapshots/test/: test_allowances.1.json  test_cannot_cause_overflow.1.json  test_cdp_operations.1.json  test_cdp_operations_with_interest.1.json  test_error_handling.1.json  test_events_on_mint.1.json  test_exact_allowance_usage.1.json  test_liquidation.1.json  test_stability_pool.1.json  test_token_initialization.1.json  test_token_transfers.1.json  test_token_transfers_self.1.json  test_transfer_from_checks_balance.1.json
stellar-contracts/rwa-vault/: Cargo.toml  README.md
stellar-contracts/rwa-vault/src/: contract.rs  lib.rs
stellar-contracts/test-suites/: .gitignore  Cargo.toml
stellar-contracts/test-suites/fuzz/: .gitignore  Cargo.toml  lib.rs
stellar-contracts/test-suites/src/: lib.rs
(+102 files in other folders)
