[package]
name = "neko-oracle"
description = "Neko Oracle - RWA price feeds and metadata"
version = "0.0.1"
authors = ["OppiaLabs <contact@oppiasoftwarelabs.com>"]
license = "MIT"
edition.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.stellar]
contract = true
cargo_inherit = true

