[package]
name = "neko-pool"
description = "Neko Pool - Lending/borrowing protocol for Real-World Assets"
version = "0.0.1"
authors = ["OppiaLabs <contact@oppiasotfwarelabs.com>"]
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-fixed-point-math = { workspace = true }
neko-oracle = { path = "../neko-oracle" }
neko-token = { path = "../neko-token" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.stellar]
contract = true
cargo_inherit = true

