[package]
name = "rwa-perps"
description = "RWA Perpetual contract - A Perpetual Future contract for RWA stocks"
version = "1.0.0"
authors = ["OppiaLabs <contact@oppiasotfwarelabs.com>"]
license = "Apache-2.0"
edition.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.stellar]
contract = true
cargo_inherit = true

