[package]
name = "rwa-perps"
description = "RWA Perpetual contract - A Perpetual Future contract for RWA stocks"
version = "0.0.1"
authors = ["OppiaLabs <contact@oppiasotfwarelabs.com>"]
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.stellar]
contract = true
cargo_inherit = true

