[package]
name = "rwa-token"
description = "RWA Token contract - A simplified fungible token for Real-World Assets with RWA Oracle price integration"
version = "0.0.1"
authors = ["OppiaLabs <contact@oppiasotfwarelabs.com>"]
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
rwa-oracle = { path = "../rwa-oracle" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.stellar]
contract = true
cargo_inherit = true
