[package]
name = "adapter-blend"
description = "RWA Vault Adapter for Blend Protocol — supplies assets to a Blend lending pool to earn yield"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
# testutils: Address::generate, register_stellar_asset_contract_v2
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.stellar]
contract = true
cargo_inherit = true
