[package]
name = "adapter-rwa-lending"
description = "RWA Lending Adapter - Connects rwa-vault to rwa-lending pools"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rwa-oracle = { path = "../../rwa-oracle" }
rwa-token = { path = "../../rwa-token" }

[package.metadata.stellar]
contract = true
cargo_inherit = true
